package game.creature;

public class Pokemon {
    
}
