package game.creature.move;

public class Move {
    
}
