package game.creature.move;

public enum MoveCategory {
    PHYSICAL,
    SPECIAL;
}
