package game.creature.move;

public class MoveResult {

}