package game.creature.move.status;

public class StatusEffect {
    
}
