package game.creature.move.status;

public class VolatileStatusEffect implements StatusEffect {
    @Override
    public Boolean isExpired() {
        // TODO Auto-generated method stub
        return null;
    }
}
